# vietnamese-t9-ime

./: .gitignore  .gitmodules  .travis.yml  README.md  README.vi.md  bintray-descriptor.json  build.gradle  build.gradle.kts  commitlocs.geojson  gradle.properties  pom.xml  settings.gradle  settings.gradle.kts  t9vietnamese.db
.che/: classpath
.github/workflows/: android.yml
app/: .project  Android.mk  CMakeLists.txt  build.gradle  build.gradle.kts  pom.xml
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/res/values/: themes.xml
app/src/androidMain/res/xml/: method.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: decomposed.dic  morphemes.txt  vi-DauMoi.dic
app/src/main/cpp/: CMakeLists.txt  dawgdic-build.cc
app/src/main/res/xml/: t9.xml  (+1 more)
common/: build.gradle.kts
common/src/androidMain/: AndroidManifest.xml
common/src/androidMain/kotlin/: AndroidApp.kt
common/src/commonMain/kotlin/: App.kt  AppUi.kt
common/src/desktopMain/kotlin/: DesktopApp.kt
common/ui/: build.gradle.kts
console/: build.gradle  build.gradle.kts
console/src/main/kotlin/: main.kt
data/: README-wikicorpus.md  VNNamesList.txt
desktop/: build.gradle.kts
desktop/src/jvmMain/kotlin/: main.kt
desktop/src/jvmTest/kotlin/: AppTests.kt
docs/: VNFamilyNames.txt  exampleSelect.txt  word_split.pl
docs/wikicorpus/: morphemes.txt
generatedatabase/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keyboardview/: build.gradle
keyboardview/src/main/: AndroidManifest.xml
lib/: build.gradle  build.gradle.kts  gradle.properties
lib/logging/: build.gradle.kts
lib/src/androidMain/: AndroidManifest.xml
lib/src/commonMain/resources/: decomposed.dic.sorted
lib/src/test/resources/: test.dic
references/: charlint.pl
sharedtest/: build.gradle.kts
vn_words/: morphemes.txt
web/: build.gradle.kts
(+286 files in other folders)
